Complete quotes work but bug in input focus

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,20 +88,83 @@
           </div>
           <div>
             <ul>
-              <li><i class="fa-solid fa-umbrella"></i>Full Cargo & Liability Insurance</li>
+              <li>
+                <i class="fa-solid fa-umbrella"></i>Full Cargo & Liability
+                Insurance
+              </li>
               <li><i class="fa-solid fa-building"></i>Office Relocation</li>
               <li><i class="fa-solid fa-industry"></i>Storage Facilities</li>
-              <li><i class="fa-solid fa-truck"></i>Transport Logistic Solutions</li>
+              <li>
+                <i class="fa-solid fa-truck"></i>Transport Logistic Solutions
+              </li>
               <li><i class="fa-solid fa-house"></i>Home Relocation</li>
               <li><i class="fa-solid fa-boxes-packing"></i>Packing Services</li>
             </ul>
           </div>
         </div>
-          
       </div>
-       
     </main>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam necessitatibus eligendi neque beatae similique, id quis accusamus mollitia ad, officia quae eveniet? Qui, similique nam. Eos atque accusamus, magnam dolor totam saepe quae iusto laudantium exercitationem recusandae, quasi est, consequatur fuga blanditiis similique sapiente culpa libero eaque rerum tenetur. Atque totam ab quibusdam repellat, quasi ratione odit ullam eius nulla aperiam consequuntur est sequi vero laudantium recusandae sunt iusto, assumenda qui quos, id labore impedit. Eligendi, earum neque praesentium nisi, assumenda ducimus itaque odio qui quaerat quia quidem sunt porro similique. Vel reprehenderit dolores excepturi fugiat, fuga odio? Perferendis enim doloremque ipsum eos voluptatem quae sit aliquam ullam atque repellat dolore, maiores molestias, neque libero excepturi quam consequatur provident officiis laudantium ratione. Nemo placeat, esse praesentium quisquam suscipit, vero qui, ratione maiores labore quos porro quod possimus blanditiis aliquid odit maxime impedit voluptatum perferendis sed error commodi excepturi est! Explicabo repudiandae omnis est, praesentium quaerat fuga eveniet illo nobis maxime sapiente, quibusdam blanditiis voluptatem ipsa ducimus hic fugit, officiis beatae qui. Provident laborum accusantium molestiae nostrum? Qui provident earum et perferendis impedit voluptatem at dolor, incidunt voluptate repellat error voluptatum expedita nesciunt unde beatae quam vitae itaque porro cum explicabo recusandae suscipit natus rerum? Quaerat neque consectetur molestiae eius veniam amet illo? Ipsa, totam error. Assumenda, odit nihil, eum voluptas ipsa maiores eligendi hic, at perspiciatis fugiat quisquam tempora voluptates neque possimus nam. Mollitia deserunt impedit ut quasi nobis accusantium, laboriosam temporibus cumque non ab porro voluptatum, odio ipsum minima. Excepturi sapiente maiores ut pariatur maxime quia. Ipsa laudantium distinctio suscipit dolor laboriosam culpa modi officiis dignissimos eius minus explicabo animi ad, incidunt, nostrum eos adipisci eveniet sunt voluptas assumenda, nulla ducimus asperiores inventore sed! Officiis laboriosam qui, at, harum facilis inventore eligendi perferendis molestias exercitationem, corporis placeat sunt doloremque illum perspiciatis hic eum! Culpa distinctio inventore eligendi. Quae quos id sed cum quisquam ipsam, nisi esse cupiditate vero numquam eum rem voluptatum consequuntur eaque porro ea? Quibusdam distinctio delectus voluptas aliquid ut quasi odit praesentium iste veritatis. Laboriosam, incidunt! Magnam deleniti voluptatem aliquid maiores expedita a ipsa illo deserunt at eligendi recusandae corporis hic sunt facilis adipisci alias excepturi cum iste, debitis neque delectus libero temporibus. Vero qui nostrum soluta tempora quod ipsa voluptatibus consectetur nesciunt eligendi officiis aut perferendis incidunt expedita cupiditate minus quia autem, laboriosam omnis maiores totam. Facilis eos officiis voluptate dolore aspernatur unde voluptatem quidem, cumque distinctio aperiam maxime ipsa tenetur quia quisquam iure quas quos ut, nihil et, nostrum facere officia modi harum. Quis, reprehenderit, error eum dolor nemo unde voluptate iste ipsa itaque eius maxime quia consequuntur. Sapiente dolorem minima nihil recusandae. Veritatis minima ducimus eum, nisi, deserunt, neque a quam dolore culpa accusamus dolores? Fugit cupiditate autem voluptatibus iure pariatur molestias sit beatae, a earum, soluta sed, quisquam in labore. Sed expedita eveniet eius unde aliquam hic neque culpa quam rerum sequi. Ipsa, laudantium est consectetur iusto error libero sequi deserunt hic accusamus inventore, assumenda illo labore repudiandae ad saepe id dolore.</p>
+    <!-- <hr /> -->
+    <section class="quote">
+      <div>
+        <div class="quoteNote">
+          <h3>Get your free Quote</h3>
+          <p>
+            Your information will be processed by our team and we will get back
+            to you as soon as possible. Let us call you!
+          </p>
+        </div>
+        <div class="quoteForm">
+          <form action="#">
+            <label for="firstName">
+              <h6>First Name*</h6>
+              <input
+                type="text"
+                id="firstName"
+                name="firstName"
+                placeholder="First Name"
+              />
+            </label>
+            <label for="Surname">
+              <h6>Surname*</h6>
+              <input
+                type="text"
+                id="Surname"
+                name="Surname"
+                placeholder="Surname"
+              />
+            </label>
+            <label for="telePhone">
+              <h6>Telephone*</h6>
+              <input
+                type="number"
+                id="telePhone"
+                name="telePhone"
+                placeholder="Telephone"
+              />
+            </label>
+            <label for="email">
+              <h6>Email*</h6>
+              <input type="email" id="email" name="email" placeholder="Email" />
+            </label>
+            <label for="movingWhen">
+              <h6>Moving When?*</h6>
+              <input
+                placeholder="Select Date"
+                type="text"
+                onfocus="(this.type='date')"
+                onblur="(this.type='text')"
+                id="movingWhen"
+              />
+            </label>
+            <button class="btn">Let's Continue</button>
+          </form>
+        </div>
+      </div>
+      <!-- <div>
+        <p><i class="fa-solid fa-circle-info"></i>We operate Nationwide serving: London, Hertfordshire, Surrey, Buckinghamshire, Berkshire, Essex.</p>
+      </div> -->
+    </section>
     <footer></footer>
 
     <!-- Bootstrap Script -->
