--- a/frontend/index.html
+++ b/frontend/index.html
@@ -55,7 +55,7 @@
       </div>
     </header>
 
-    <div class="navbar" >
+    <div class="navbar">
       <div class="container-fluid d-flex align-items-between">
         <div class="nav_left">
           <div id="logo">
@@ -104,68 +104,85 @@
           </div>
         </div>
       </div>
+
+      <section class="quote">
+        <div class="container">
+          <div class="quoteNote">
+            <h3>Get your free Quote</h3>
+            <p>
+              Your information will be processed by our team and we will get
+              back to you as soon as possible. Let us call you!
+            </p>
+          </div>
+          <div class="quoteForm">
+            <form action="#">
+              <div class="group-form">
+                <div class="first">
+                  <label for="firstName"> First Name* </label>
+                  <input
+                    type="text"
+                    id="firstName"
+                    name="firstName"
+                    placeholder="First Name"
+                  />
+                </div>
+                <div class="second">
+                  <label for="Surname"> Surname* </label>
+                  <input
+                    type="text"
+                    id="Surname"
+                    name="Surname"
+                    placeholder="Surname"
+                  />
+                </div>
+              </div>
+              <div class="group-form">
+                <div class="first">
+                  <label for="telePhone"> Telephone* </label>
+                  <input
+                    type="number"
+                    id="telePhone"
+                    name="telePhone"
+                    placeholder="Telephone"
+                  />
+                </div>
+                <div class="second">
+                  <label for="movingWhen"> Moving When?* </label>
+                  <input
+                    placeholder="Select Date"
+                    type="text"
+                    onfocus="(this.type='date')"
+                    onblur="(this.type='text')"
+                    id="movingWhen"
+                  />
+                </div>
+              </div>
+
+              <div class="group-form d-flex justify-content-between flex-column">
+                <div class="first">
+                  <label for="email"> Email* </label>
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    placeholder="Email"
+                  />
+                </div>
+                <div class="second ">
+                  <button class="btn" type="button">Let's Continue</button>
+                </div>
+              </div>
+
+              
+            </form>
+          </div>
+        </div>
+        <!-- <div>
+          <p><i class="fa-solid fa-circle-info"></i>We operate Nationwide serving: London, Hertfordshire, Surrey, Buckinghamshire, Berkshire, Essex.</p>
+        </div> -->
+      </section>
     </main>
-    <!-- <hr /> -->
-    <section class="quote">
-      <div>
-        <div class="quoteNote">
-          <h3>Get your free Quote</h3>
-          <p>
-            Your information will be processed by our team and we will get back
-            to you as soon as possible. Let us call you!
-          </p>
-        </div>
-        <div class="quoteForm">
-          <form action="#">
-            <label for="firstName">
-              <h6>First Name*</h6>
-              <input
-                type="text"
-                id="firstName"
-                name="firstName"
-                placeholder="First Name"
-              />
-            </label>
-            <label for="Surname">
-              <h6>Surname*</h6>
-              <input
-                type="text"
-                id="Surname"
-                name="Surname"
-                placeholder="Surname"
-              />
-            </label>
-            <label for="telePhone">
-              <h6>Telephone*</h6>
-              <input
-                type="number"
-                id="telePhone"
-                name="telePhone"
-                placeholder="Telephone"
-              />
-            </label>
-            <label for="email">
-              <h6>Email*</h6>
-              <input type="email" id="email" name="email" placeholder="Email" />
-            </label>
-            <label for="movingWhen">
-              <h6>Moving When?*</h6>
-              <input
-                placeholder="Select Date"
-                type="text"
-                onfocus="(this.type='date')"
-                onblur="(this.type='text')"
-                id="movingWhen"
-              />
-            </label>
-            <button class="btn">Let's Continue</button>
-          </form>
-        </div>
-      </div>
-      <!-- <div>
-        <p><i class="fa-solid fa-circle-info"></i>We operate Nationwide serving: London, Hertfordshire, Surrey, Buckinghamshire, Berkshire, Essex.</p>
-      </div> -->
-    </section>
+
     <footer></footer>
 
     <!-- Bootstrap Script -->
