--- a/frontend/index.html
+++ b/frontend/index.html
@@ -62,7 +62,7 @@
             <img src="./assets/Images/logo.png" alt="logo" />
           </div>
           <ul>
-            <li><a href="/">Home</a></li>
+            <li class="active"><a href="/">Home</a></li>
             <li><a href="#">Services</a></li>
             <li><a href="#">Blogs</a></li>
             <li><a href="#">About Us</a></li>
