--- a/frontend/aboutus.html
+++ b/frontend/aboutus.html
@@ -32,7 +32,7 @@
     <!-- Home CSS -->
     <link rel="stylesheet" href="./assets/css/about.css" />
 
-    <title>Home - Home Removals</title>
+    <title>About - Home Removals</title>
   </head>
   <body>
     <header>
