add services page

--- a/frontend/services.html
+++ b/frontend/services.html
@@ -92,7 +92,7 @@
 
       <section class="service_sec">
         <div class="container">
-          <div class="box">
+          <div class="box box1">
             <h3>House Removal London</h3>
             <p>
               Quick Trip Removal offers the best removals services in London. We
@@ -101,6 +101,101 @@
               professional surveyors discuss all the details. They will draw a
               formal plan in terms of how the complete move will be carried out.
               We specialise in all Domestic and House Moves.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box2">
+            <h3>Furniture Removal London</h3>
+            <p>
+              Since pianos and house furniture are extremely big and heavy,
+              their transportation is an issue. However big and heavy furniture
+              can be easily transported in our vans. we are here to help you.
+              Quick Trip Removals is a professional furniture mover Company in
+              London.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box1">
+            <h3>Office Removal London</h3>
+            <p>
+              Office Removal is a specialised service offered to businesses when
+              they need to move their offices to a new location. They are
+              different from house removals in terms of time, budget,
+              organisation, packing methods and supplies. Suppose your inventory
+              can be dismantled or fit in moving crates. In that case, there are
+              no restrictions to the size or type of organisations Top Removals
+              can relocate.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box2">
+            <h3>Container Removals</h3>
+            <p>
+              Starting from the movement of a teapoy to your king-size beds, our
+              people take care of everything, which also includes your big or
+              small container. A container is something that is used everywhere
+              from a household sphere to commercial space to an industrial unit.
+              We understand the transportation of these containers requires
+              utmost safety assurance. With us, your items are properly
+              packaged, loaded, moved, and unloaded.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box1">
+            <h3>Commercial Removals</h3>
+            <p>
+              If you are concerned with dealing with the packaged or unpackaged
+              goods and items, commercial removals services are for you. When
+              it’s us at Quick Trip Removals, the movement of stored goods from
+              one place to another is safe and secure. As a manufacturer, you
+              can ensure that your products reach customers in good condition
+              without hampering your reputation in any way. In addition, timely
+              deliveries are assured when it’s our experts with you.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box2">
+            <h3>Overseas Removals</h3>
+            <p>
+              Are you moving from the UK or returning from overseas? If you want
+              to have international removals services, Quick Trip Removals is
+              for you. While there are multiple service providers available
+              around the corner to help you get the best services, you rarely
+              find someone with overseas removals services.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box1">
+            <h3>Compare Removals</h3>
+            <p>
+              We move your office/house goods from one place to another in
+              beneficial manners. Our tension-free service can save your time
+              and money. We give the inner calm that your move is being cared
+              for by highly qualified and professional removalists. On our
+              platform, we do not make fake promises. Instead, we always try to
+              give you practical reasons to choose us.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box2">
+            <h3>Man With A Van Removals</h3>
+            <p>
+              Our man with a van service takes care of your transport
+              requirements. We provide a professional service at too competing
+              pricing. When you use our man with a van service, you'll be
+              assigned your move coordinator to ensure your man and van service
+              is as seamless as possible.
+            </p>
+            <a href="#">See More</a>
+          </div>
+          <div class="box box1">
+            <h3>Packaging Materials</h3>
+            <p>
+              Quick Trip Removals is available here with Packing Solution to all
+              locations in London the surrounding areas. Regardless of whatever
+              kind of products you want us to move, utilization of superior
+              quality packaging products is essential for keeping them intact.
+              We put the utmost concentration on this very vital fact.
             </p>
             <a href="#">See More</a>
           </div>
