add galley page

--- a/frontend/services.html
+++ b/frontend/services.html
@@ -63,9 +63,9 @@
           </div>
           <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="#">Services</a></li>
+            <li class="active"><a href="#">Services</a></li>
             <li><a href="#">Blogs</a></li>
-            <li class="active"><a href="#">About Us</a></li>
+            <li><a href="#">About Us</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
