--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -41,15 +41,25 @@
           <div class="surveyBox">Book Video Call Survey For Instant Quote</div>
           <div class="contactInformation">
             <i class="fa-solid fa-phone"></i>
-            <a href="#">0208 123 7717</a>
+            <a href="tel:03180126925">0318-0126925</a>
             <i class="fa-solid fa-envelope"></i>
-            <a href="#">info@fastinteriorremovals.co.uk</a>
+            <a href="mailto:muhammadyahiya166@gmail.com"
+              >muhammadyahiya166@gmail.com</a
+            >
           </div>
           <div class="socialMediaIcon">
-            <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="fa-brands fa-facebook fa-lg"></i
+            ></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -62,16 +72,20 @@
             <img src="./assets/Images/logo.png" alt="logo" />
           </div>
           <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li class="active"><a href="#">Blogs</a></li>
-            <li><a href="#">About Us</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./aboutus.html">About Us</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li class="active"><a href="./gallery.html">Gallery</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav_right">
-          <i></i>
-          <a href="tel:02031989198">02031989198</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!"
+            target="_blank"
+          >
+            <i class="fa-brands fa-whatsapp"></i> 03180126925</a
+          >
         </div>
       </div>
     </div>
@@ -105,7 +119,7 @@
           </div>
           <div class="row my-4">
             <div class="col-md-6">
-                <img
+              <img
                 src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d1215a0352b05a02ba8a53_s2.png"
                 alt="gallery2"
                 loading="lazy"
@@ -115,8 +129,49 @@
                 alt="gallery3"
                 loading="lazy"
               />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d12227661b68cce458fb5e_s6.png"
+                alt="gallery4"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d1223f05f315442e19a65f_s8.png"
+                alt="gallery5"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d122589c5e18d4beca0224_s10.png"
+                alt="gallery6"
+                loading="lazy"
+              />
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-6">
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d1218a4b5c9a28003b6449_s3.png"
+                alt="gallery4"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d12195a1a2c7be0e2191fe_s5.png"
+                alt="gallery5"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d122589c5e18d4beca0224_s10.png"
+                alt="gallery6"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d122459c5e185093ca01c1_s9.png"
+                alt="gallery7"
+                loading="lazy"
+              />
+              <img
+                src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d12260acb2757b8e406d1d_s11.png"
+                alt="gallery7"
+                loading="lazy"
+              />
+            </div>
           </div>
         </div>
       </section>
