--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,15 +41,15 @@
           <div class="surveyBox">Book Video Call Survey For Instant Quote</div>
           <div class="contactInformation">
             <i class="fa-solid fa-phone"></i>
-            <a href="#">0208 123 7717</a>
+            <a href="tel:03180126925">0318-0126925</a>
             <i class="fa-solid fa-envelope"></i>
-            <a href="#">info@fastinteriorremovals.co.uk</a>
+            <a href="mailto:muhammadyahiya166@gmail.com">muhammadyahiya166@gmail.com</a>
           </div>
           <div class="socialMediaIcon">
-            <a href="#"><i class="fa-brands fa-facebook fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram fa-lg"></i></a>
-            <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
+            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i></a>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></a>
           </div>
         </div>
       </div>
@@ -62,16 +62,16 @@
             <img src="./assets/Images/logo.png" alt="logo" />
           </div>
           <ul>
-            <li class="active"><a href="/">Home</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Blogs</a></li>
-            <li><a href="#">About Us</a></li>
+            <li class="active"><a href="./index.html">Home</a></li>
+            <li><a href="./aboutus.html">About Us</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
         </div>
         <div class="nav_right">
-          <i></i>
-          <a href="tel:02031989198">02031989198</a>
+          
+          <a href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!" target="_blank"> <i class="fa-brands fa-whatsapp"></i> 03180126925</a>
         </div>
       </div>
     </div>
