--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,13 +43,23 @@
             <i class="fa-solid fa-phone"></i>
             <a href="tel:03180126925">0318-0126925</a>
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:muhammadyahiya166@gmail.com">muhammadyahiya166@gmail.com</a>
+            <a href="mailto:muhammadyahiya166@gmail.com"
+              >muhammadyahiya166@gmail.com</a
+            >
           </div>
           <div class="socialMediaIcon">
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
-            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i></a>
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="fa-brands fa-facebook fa-lg"></i
+            ></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -70,8 +80,12 @@
           </ul>
         </div>
         <div class="nav_right">
-          
-          <a href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!" target="_blank"> <i class="fa-brands fa-whatsapp"></i> 03180126925</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!"
+            target="_blank"
+          >
+            <i class="fa-brands fa-whatsapp"></i> 03180126925</a
+          >
         </div>
       </div>
     </div>
@@ -157,8 +171,9 @@
                   />
                 </div>
               </div>
-
-              <div class="group-form d-flex justify-content-between flex-column">
+              <div
+                class="group-form d-flex justify-content-between flex-column"
+              >
                 <div class="first">
                   <label for="email"> Email* </label>
                   <input
@@ -168,18 +183,25 @@
                     placeholder="Email"
                   />
                 </div>
-                <div class="second ">
+                <div class="second">
                   <button class="btn" type="button">Let's Continue</button>
                 </div>
               </div>
-
-              
             </form>
           </div>
         </div>
-        <!-- <div>
-          <p><i class="fa-solid fa-circle-info"></i>We operate Nationwide serving: London, Hertfordshire, Surrey, Buckinghamshire, Berkshire, Essex.</p>
-        </div> -->
+      </section>
+      <section id="aboutUs">
+        <div>
+          <h2>About Us</h2>
+          <h2>
+            The Best Moving Company In The London - Fast Interior Removals Ltd.
+          </h2>
+            <p><strong>Fast Interior Removals Ltd</strong> is a vibrant young <strong>relocation company</strong> that prides itself on the high level of personalized service it gives. We’re <strong>London based removal company</strong>, over <strong>10 years  experience</strong> in the removals and storage industry. Fast Movers more than just a moving company, we handle all aspects of relocation tailoring our service to meet your individual needs. We can help facilitate every facet of your move, whether you are moving locally, nationally or overseas. We take care of the logistics of your move, from beginning to end. Let us handle the details and take the stress out of relocating for you.</p>
+        </div>
+        <div class="aboutUsPic">
+          <img src="./assets/Images/aboutUs.jpg" alt="aboutUsPic">
+        </div>
       </section>
     </main>
 
