--- a/frontend/services.html
+++ b/frontend/services.html
@@ -116,7 +116,7 @@
               formal plan in terms of how the complete move will be carried out.
               We specialise in all Domestic and House Moves.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Furniture Removal London</h3>
@@ -127,7 +127,7 @@
               Quick Trip Removals is a professional furniture mover Company in
               London.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Office Removal London</h3>
@@ -140,7 +140,7 @@
               no restrictions to the size or type of organisations Top Removals
               can relocate.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Container Removals</h3>
@@ -153,7 +153,7 @@
               utmost safety assurance. With us, your items are properly
               packaged, loaded, moved, and unloaded.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Commercial Removals</h3>
@@ -166,7 +166,7 @@
               without hampering your reputation in any way. In addition, timely
               deliveries are assured when it’s our experts with you.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Overseas Removals</h3>
@@ -177,7 +177,7 @@
               around the corner to help you get the best services, you rarely
               find someone with overseas removals services.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Compare Removals</h3>
@@ -189,7 +189,7 @@
               platform, we do not make fake promises. Instead, we always try to
               give you practical reasons to choose us.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box2">
             <h3>Man With A Van Removals</h3>
@@ -200,7 +200,7 @@
               assigned your move coordinator to ensure your man and van service
               is as seamless as possible.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
           <div class="box box1">
             <h3>Packaging Materials</h3>
@@ -211,7 +211,7 @@
               quality packaging products is essential for keeping them intact.
               We put the utmost concentration on this very vital fact.
             </p>
-            <a href="#">See More</a>
+            <a href="#">Get a Quote</a>
           </div>
         </div>
       </section>
