--- a/frontend/index.html
+++ b/frontend/index.html
@@ -192,15 +192,32 @@
         </div>
       </section>
       <section id="aboutUs">
-        <div>
-          <h2>About Us</h2>
-          <h2>
-            The Best Moving Company In The London - Fast Interior Removals Ltd.
-          </h2>
-            <p><strong>Fast Interior Removals Ltd</strong> is a vibrant young <strong>relocation company</strong> that prides itself on the high level of personalized service it gives. We’re <strong>London based removal company</strong>, over <strong>10 years  experience</strong> in the removals and storage industry. Fast Movers more than just a moving company, we handle all aspects of relocation tailoring our service to meet your individual needs. We can help facilitate every facet of your move, whether you are moving locally, nationally or overseas. We take care of the logistics of your move, from beginning to end. Let us handle the details and take the stress out of relocating for you.</p>
+        <div class="container">
+          <div class="rowww">
+          <div>
+            <h2>About Us</h2>
+            <h2>
+              The Best Moving Company In The London - Fast Interior Removals
+              Ltd.
+            </h2>
+            <p>
+              <strong>Fast Interior Removals Ltd</strong> is a vibrant young
+              <strong>relocation company</strong> that prides itself on the high
+              level of personalized service it gives. We’re
+              <strong>London based removal company</strong>, over
+              <strong>10 years experience</strong> in the removals and storage
+              industry. Fast Movers more than just a moving company, we handle
+              all aspects of relocation tailoring our service to meet your
+              individual needs. We can help facilitate every facet of your move,
+              whether you are moving locally, nationally or overseas. We take
+              care of the logistics of your move, from beginning to end. Let us
+              handle the details and take the stress out of relocating for you.
+            </p>
+          </div>
+          <div class="aboutUsPic">
+            <img src="./assets/Images/aboutUs.jpg" alt="aboutUsPic" />
+          </div>
         </div>
-        <div class="aboutUsPic">
-          <img src="./assets/Images/aboutUs.jpg" alt="aboutUsPic">
         </div>
       </section>
     </main>
