pull by refector

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -194,30 +194,93 @@
       <section id="aboutUs">
         <div class="container">
           <div class="rowww">
-          <div>
-            <h2>About Us</h2>
-            <h2>
-              The Best Moving Company In The London - Fast Interior Removals
-              Ltd.
-            </h2>
-            <p>
-              <strong>Fast Interior Removals Ltd</strong> is a vibrant young
-              <strong>relocation company</strong> that prides itself on the high
-              level of personalized service it gives. We’re
-              <strong>London based removal company</strong>, over
-              <strong>10 years experience</strong> in the removals and storage
-              industry. Fast Movers more than just a moving company, we handle
-              all aspects of relocation tailoring our service to meet your
-              individual needs. We can help facilitate every facet of your move,
-              whether you are moving locally, nationally or overseas. We take
-              care of the logistics of your move, from beginning to end. Let us
-              handle the details and take the stress out of relocating for you.
-            </p>
-          </div>
-          <div class="aboutUsPic">
-            <img src="./assets/Images/aboutUs.jpg" alt="aboutUsPic" />
+            <div>
+              <h2>About Us</h2>
+              <h2>
+                The Best Moving Company In The London - Fast Interior Removals
+                Ltd.
+              </h2>
+              <p>
+                <strong>Fast Interior Removals Ltd</strong> is a vibrant young
+                <strong>relocation company</strong> that prides itself on the
+                high level of personalized service it gives. We’re
+                <strong>London based removal company</strong>, over
+                <strong>10 years experience</strong> in the removals and storage
+                industry. Fast Movers more than just a moving company, we handle
+                all aspects of relocation tailoring our service to meet your
+                individual needs. We can help facilitate every facet of your
+                move, whether you are moving locally, nationally or overseas. We
+                take care of the logistics of your move, from beginning to end.
+                Let us handle the details and take the stress out of relocating
+                for you.
+              </p>
+            </div>
+            <div class="aboutUsPic">
+              <img src="./assets/Images/aboutUs.jpg" alt="aboutUsPic" />
+            </div>
           </div>
         </div>
+      </section>
+
+      <section id="ourService">
+        <img src="./assets/Images/bgService.jpg" alt="bgService" />
+        <h2>Our Services</h2>
+        <h2>Services We Provide</h2>
+        <div class="serviceBox">
+          <div>
+            <i class="fa-solid fa-earth-americas fa-2xl"></i>
+            <h2>World Moving</h2>
+            <p>
+              We provide services all over the world, we have multiple offices
+              in Europe
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-box-open fa-2xl"></i>
+            <h2>Mover & Removal Services</h2>
+            <p>
+              We are top-rated movers in UK, provide complete removal services
+              for long distance and short distance.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-cart-shopping fa-2xl"></i>
+            <h2>Storage Services</h2>
+            <p>
+              Are you looking for storage solution check our storage services,
+              we have multiple warehouses.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-ship fa-2xl"></i>
+            <h2>Packing Services</h2>
+            <p>
+              We provide full packing and unpacking services on demand, check
+              complete details...
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-gift fa-2xl"></i>
+            <h2>Man & Van Service</h2>
+            <p>
+              We have all size of Vans, you can demand how many men you need.
+              check complete detail.
+            </p>
+            <a href="#">Read More</a>
+          </div>
+          <div>
+            <i class="fa-solid fa-hourglass-end fa-2xl"></i>
+            <h2>Cleaning Services</h2>
+            <p>
+              We have dedicated team for cleaning services, read more about our
+              services.
+            </p>
+            <a href="#">Read More</a>
+          </div>
         </div>
       </section>
     </main>
