--- a/frontend/index.html
+++ b/frontend/index.html
@@ -223,63 +223,78 @@
       </section>
 
       <section id="ourService">
-        <img src="./assets/Images/bgService.jpg" alt="bgService" />
-        <h2>Our Services</h2>
-        <h2>Services We Provide</h2>
-        <div class="serviceBox">
-          <div>
-            <i class="fa-solid fa-earth-americas fa-2xl"></i>
-            <h2>World Moving</h2>
-            <p>
-              We provide services all over the world, we have multiple offices
-              in Europe
-            </p>
-            <a href="#">Read More</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-box-open fa-2xl"></i>
-            <h2>Mover & Removal Services</h2>
-            <p>
-              We are top-rated movers in UK, provide complete removal services
-              for long distance and short distance.
-            </p>
-            <a href="#">Read More</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-cart-shopping fa-2xl"></i>
-            <h2>Storage Services</h2>
-            <p>
-              Are you looking for storage solution check our storage services,
-              we have multiple warehouses.
-            </p>
-            <a href="#">Read More</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-ship fa-2xl"></i>
-            <h2>Packing Services</h2>
-            <p>
-              We provide full packing and unpacking services on demand, check
-              complete details...
-            </p>
-            <a href="#">Read More</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-gift fa-2xl"></i>
-            <h2>Man & Van Service</h2>
-            <p>
-              We have all size of Vans, you can demand how many men you need.
-              check complete detail.
-            </p>
-            <a href="#">Read More</a>
-          </div>
-          <div>
-            <i class="fa-solid fa-hourglass-end fa-2xl"></i>
-            <h2>Cleaning Services</h2>
-            <p>
-              We have dedicated team for cleaning services, read more about our
-              services.
-            </p>
-            <a href="#">Read More</a>
+        <div class="container text-center">
+          <h2>Our Services</h2>
+          <h3>Services We Provide</h3>
+          <div class="serviceBox">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-earth-americas fa-2xl"></i>
+                  <h2>World Moving</h2>
+                  <p>
+                    We provide services all over the world, we have multiple
+                    offices in Europe
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-box-open fa-2xl"></i>
+                  <h2>Mover & Removal Services</h2>
+                  <p>
+                    We are top-rated movers in UK, provide complete removal
+                    services for long distance and short distance.
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-cart-shopping fa-2xl"></i>
+                  <h2>Storage Services</h2>
+                  <p>
+                    Are you looking for storage solution check our storage
+                    services, we have multiple warehouses.
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-ship fa-2xl"></i>
+                  <h2>Packing Services</h2>
+                  <p>
+                    We provide full packing and unpacking services on demand,
+                    check complete details...
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-gift fa-2xl"></i>
+                  <h2>Man & Van Service</h2>
+                  <p>
+                    We have all size of Vans, you can demand how many men you
+                    need. check complete detail.
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="box">
+                  <i class="fa-solid fa-hourglass-end fa-2xl"></i>
+                  <h2>Cleaning Services</h2>
+                  <p>
+                    We have dedicated team for cleaning services, read more
+                    about our services.
+                  </p>
+                  <a href="#">Read More</a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
