--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,9 @@
       rel="stylesheet"
     />
 
+    <!-- icon -->
+    <link rel="shortcut icon" href="./assets/Images/icon.ico" type="image/x-icon">
+
     <!-- main CSS -->
     <link rel="stylesheet" href="./assets/css/main.css" />
 
@@ -236,7 +239,7 @@
                     We provide services all over the world, we have multiple
                     offices in Europe
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -247,7 +250,7 @@
                     We are top-rated movers in UK, provide complete removal
                     services for long distance and short distance.
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -258,7 +261,7 @@
                     Are you looking for storage solution check our storage
                     services, we have multiple warehouses.
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -269,7 +272,7 @@
                     We provide full packing and unpacking services on demand,
                     check complete details...
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -280,7 +283,7 @@
                     We have all size of Vans, you can demand how many men you
                     need. check complete detail.
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
               <div class="col-md-4">
@@ -291,7 +294,7 @@
                     We have dedicated team for cleaning services, read more
                     about our services.
                   </p>
-                  <a href="#">Read More</a>
+                  <a href="#">Read More <i class="fa-solid fa-caret-right"></i></a>
                 </div>
               </div>
             </div>
