--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -26,6 +26,9 @@
       rel="stylesheet"
     />
 
+     <!-- icon -->
+     <link rel="shortcut icon" href="./assets/Images/icon.ico" type="image/x-icon">
+
     <!-- main CSS -->
     <link rel="stylesheet" href="./assets/css/main.css" />
 
