--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,6 +95,7 @@
 
     <main class="home_page">
       <div id="homeBanner">
+        <div class="container">
         <img src="./assets/Images/pic.png" alt="bannerImg" />
         <div class="bannerContent">
           <div>
@@ -120,6 +121,7 @@
             </ul>
           </div>
         </div>
+      </div>
       </div>
 
       <section class="quote">
