--- a/frontend/aboutus.html
+++ b/frontend/aboutus.html
@@ -26,8 +26,12 @@
       rel="stylesheet"
     />
 
-     <!-- icon -->
-     <link rel="shortcut icon" href="./assets/Images/icon.ico" type="image/x-icon">
+    <!-- icon -->
+    <link
+      rel="shortcut icon"
+      href="./assets/Images/icon.ico"
+      type="image/x-icon"
+    />
 
     <!-- main CSS -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -46,13 +50,23 @@
             <i class="fa-solid fa-phone"></i>
             <a href="tel:03180126925">0318-0126925</a>
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:muhammadyahiya166@gmail.com">muhammadyahiya166@gmail.com</a>
+            <a href="mailto:muhammadyahiya166@gmail.com"
+              >muhammadyahiya166@gmail.com</a
+            >
           </div>
           <div class="socialMediaIcon">
-            <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i></a>
-            <a href="https://twitter.com/" target="_blank"><i class="fa-brands fa-square-twitter fa-lg"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i></a>
-            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="fa-brands fa-facebook fa-lg"></i
+            ></a>
+            <a href="https://twitter.com/" target="_blank"
+              ><i class="fa-brands fa-square-twitter fa-lg"></i
+            ></a>
+            <a href="https://www.instagram.com/" target="_blank"
+              ><i class="fa-brands fa-instagram fa-lg"></i
+            ></a>
+            <a href="https://www.linkedin.com/" target="_blank"
+              ><i class="fa-brands fa-linkedin fa-lg"></i
+            ></a>
           </div>
         </div>
       </div>
@@ -73,8 +87,12 @@
           </ul>
         </div>
         <div class="nav_right">
-          
-          <a href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!" target="_blank"> <i class="fa-brands fa-whatsapp"></i> 03180126925</a>
+          <a
+            href="https://api.whatsapp.com/send?phone=03180126925&text=Hello!"
+            target="_blank"
+          >
+            <i class="fa-brands fa-whatsapp"></i> 03180126925</a
+          >
         </div>
       </div>
     </div>
@@ -224,7 +242,231 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+      <div class="map">
+        <img src="./assets/Images/map.png" alt="mapPic" />
+      </div>
+
+      <div class="formDetail">
+        <form action="#">
+          <div>
+            <h4>Contact us</h4>
+            <p>
+              Our team is available to answer any questions you may have, and
+              we're always happy to provide you with a free quote.
+            </p>
+          </div>
+
+          <label for="first_name">
+            <h5>First Name</h5>
+            <input
+              type="text"
+              id="first_name"
+              name="firstName"
+              placeholder="First Name"
+            />
+          </label>
+          <label for="last_name">
+            <h5>Last Name</h5>
+            <input
+              type="text"
+              id="last_name"
+              name="last_name"
+              placeholder="First Name"
+            />
+          </label>
+          <label for="phone_number">
+            <h5>Phone</h5>
+            <input
+              type="text"
+              id="phone_number"
+              name="phone_number"
+              placeholder="First Name"
+            />
+          </label>
+          <label for="your_email">
+            <h5>Your Email</h5>
+            <input
+              type="text"
+              id="your_email"
+              name="your_email"
+              placeholder="First Name"
+            />
+          </label>
+          <label for="your_message">
+            <h5>Your Message</h5>
+            <textarea
+              id="your_message"
+              name="your_message"
+              placeholder="Your Message Goes Here"
+            ></textarea>
+          </label>
+          <button class="btn" type="button">Let's Continue</button>
+        </form>
+        <div class="policyTerms">
+          <p>
+            By clicking Send, I agree to DBM Express's Privacy Policy and Terms
+            of Service.
+          </p>
+          <div>
+            <div class="socialMedia">
+              <i class="fa-brands fa-facebook fa-2xl"></i>
+              <i class="fa-brands fa-facebook-messenger fa-2xl"></i>
+              <i class="fa-brands fa-whatsapp fa-2xl"></i>
+              <i class="fa-brands fa-instagram fa-2xl"></i>
+            </div>
+            <a href="#"
+              >Get a free quote <i class="fa-solid fa-right-long"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="londonBranch">
+        <h3><span>LONDON BRANCHES</span></h3>
+
+        <div class="londonOffice">
+          <h4>North London Office</h4>
+          <p>19 Greenwood Place, Kentish Town NW5 1LB, London</p>
+        </div>
+
+        <div class="headOffice">
+          <h4>Head Office</h4>
+          <p>
+            M25 Business Centre 121 Brooker Rd Waltham Abbey EN9 1JH, London
+          </p>
+        </div>
+
+        <div class="info">
+          <h4>02036 213141</h4>
+          <a href="#"> info@dbmexpress.co.uk </a>
+        </div>
+
+        <div class="nationWide">
+          <p>We operate Nationwide serving:</p>
+          <p>
+            <i class="fa-solid fa-circle-info"></i> London, Hertfordshire,
+            Surrey, Buckinghamshire, Berkshire, Essex.
+          </p>
+        </div>
+      </div>
+
+      <div class="slider">
+        <div class="owl-carousel owl-theme owwl">
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+          <div class="item">
+            <img
+              src="https://uploads-ssl.webflow.com/638fe270b5e20b9f30aa5a0c/63d120f0770071396744c3ba_s1.png"
+              alt="Pics"
+              width="100"
+              height="100"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="footerNav">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Gallery</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Terms & Conditions</a></li>
+        </ul>
+        <p class="copyright">
+          © Copyright 2015-2023 DBM Express. All rights reserved. Original and
+          exclusive content.
+        </p>
+      </div>
+    </footer>
 
     <!-- Bootstrap Script -->
     <script
@@ -233,7 +475,22 @@
       crossorigin="anonymous"
     ></script>
 
-    <!--  -->
-    <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
+    <!-- Jquery Script -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <!-- Owl Carosel Script -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!-- Owl.js -->
+    <script src="./assets/js/owl.js"></script>
   </body>
 </html>
